dev(front): index - fix datepicker icon mobile

--- a/public/css/styles/small_styles.css
+++ b/public/css/styles/small_styles.css
@@ -91,6 +91,10 @@
         height: 40%;
     }
 
+    .position-icon-datepicker {
+        right: 50%;
+    }
+
 
     .btn-contact {
         padding-right: 1em !important;
